fixed overbleeding of product description

--- a/public/style.css
+++ b/public/style.css
@@ -55,7 +55,7 @@ form div {
 
 #badge-body {
   padding-top: 8%;
-  padding-right: 8%
+  padding-right: 5px;
 }
 
 .navbar {
